# PolaRam

./: .gitignore  CITATION.cff  MANIFEST.ini  README.md  conda_env.yml  conda_env_export.sh  pyproject.toml  setup.py
PolaRam/: __main__.py  extract.py  run.py  simulate.py  version.py
PolaRam/test/: __main__.py  test_SetupDecoder.py  test_utilities.py
